Bug #2751: Fix layout crash of execution state in VM details views when name is too large

--- a/wat/style/components/_layout-details.scss
+++ b/wat/style/components/_layout-details.scss
@@ -242,3 +242,8 @@ ul.tags li {
 .execution-params {
     display: none;
 }
+
+.vmst-vm-name {
+    overflow: visible;
+    max-width: 100px;
+}
